fixed overflow bugs when text would go over a card in global page. added comments

--- a/flashcards/frontend/src/components/CardSlider.css
+++ b/flashcards/frontend/src/components/CardSlider.css
@@ -15,7 +15,7 @@
   border: 2px solid transparent;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
   margin: 8px 10px;
-  min-height: 220px;
+  min-height: 250px;
 }
 
 .card-list .card-link .card-tags {
@@ -74,13 +74,20 @@
   font-size: 16px;
   color: #000;
   margin-bottom: 10px;
+  word-wrap: break-word;
+  overflow-y: auto;
+  max-height: 65px;
+  line-height: normal;
 }
 
 .card-list .card-link .card-back {
   font-size: 14px;
   color: darkgray;
   margin-bottom: 10px;
-  margin-bottom: 5px;
+  word-wrap: break-word;
+  overflow-y: auto;
+  max-height: 60px;
+  line-height: normal;
 }
 
 .global-page-container .card-list .card-link .card-owner {
