--- a/flashcards/frontend/src/components/DeckSlider.css
+++ b/flashcards/frontend/src/components/DeckSlider.css
@@ -117,6 +117,10 @@
   font-size: 16px;
   color: #000;
   margin-bottom: 10px;
+  word-wrap: break-word;
+  overflow-y: auto;
+  max-height: 60px;
+  line-height: normal;
 }
 
 .deck-list .deck-link .deck-description {
@@ -124,6 +128,10 @@
   color: darkgrey;
   font-weight: bold;
   margin-bottom: 6px;
+  word-wrap: break-word;
+  overflow-y: auto;
+  max-height: 60px;
+  line-height: normal;
 }
 
 .deck-list .deck-link .ai-deck-description {
